# libjson

./: LICENSE  meson.build
include/json/: json_value.hpp  utils.hpp
tests/: test_basic.cpp  test_constructors.cpp  test_value_serialize_basetypes.cpp  test_value_serialize_list.cpp  test_value_serialize_object.cpp
